--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Home Page</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
     
