--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Home Page</title>
+    <meta name="google-site-verification" content="sYqZ1hNuM5dJnSXdv1xjCzzsLsZFByetnFvhNVVh4Io" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/home.css">
 </head>
